--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <head>
     <base href="/">
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/img/icon_sp.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Fondo SP</title>
